--- a/03cssFundamentals/style.css
+++ b/03cssFundamentals/style.css
@@ -5,12 +5,20 @@ h4,
 p,
 li {
   font-family: sans-serif;
+  color: #444444;
+}
+
+h1,
+h2,
+h3 {
+  color: #1098ad;
 }
 
 h1 {
   font-size: 26px; /*tela terá exatamente 26 pixels de sua tela física*/
   text-transform: uppercase; /*transforma letras minúsculas em maiúsculas*/
   font-style: italic;
+  color: #1098ad;
 }
 
 h2 {
@@ -65,4 +73,14 @@ font-style: italic;
 
 .related {
   list-style: none;
+}
+
+.main-header {
+  background-color: red; /*f7f7f7*/
+}
+
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
 }
