--- a/03cssFundamentals/style.css
+++ b/03cssFundamentals/style.css
@@ -76,11 +76,27 @@ font-style: italic;
 }
 
 .main-header {
-  background-color: red; /*f7f7f7*/
+  background-color: #f7f7f7;
 }
 
 aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
+  border-left: 5px solid #1098ad;
+  border-right: 5px solid #1098ad;
+}
+
+body {
+  /**/
+}
+
+/*
+.first-li {
+  font-weight: bold;
+}
+*/
+
+li:first-child {
+  font-weight: bold;
 }
