--- a/03cssFundamentals/style.css
+++ b/03cssFundamentals/style.css
@@ -100,3 +100,30 @@ body {
 li:first-child {
   font-weight: bold;
 }
+
+li:last-child {
+  font-style: italic;
+}
+
+/*
+li:nth-child(3) {
+  para atingir demais elementos filho da lista. terceiro item da lista
+  color: red;
+}
+*/
+/*
+li:nth-child(odd) {
+  keywords: uso do odd aplioara apenas em elemento ímpar
+  color: red;
+}
+*/
+
+li:nth-child(even) {
+  /*keywords: uso do even aplicará apenas nos elementos pares*/
+  /*color: red;*/
+}
+
+article p:last-child {
+  /*utilizando pseudo classes nos demais elementos do html, observar sempre a estrutura para pegar o elemento correto. Olhar no html qual é o primeiro elemento filho do article.*/
+  color: red;
+}
