--- a/03cssFundamentals/style.css
+++ b/03cssFundamentals/style.css
@@ -1,12 +1,52 @@
 * {
   /*este é um seletor universal, é muito útil quando o não há propriedade que são herdadas, assim como o body ele interfere no estilo da página, e também existem regras de prioridade para que as propriedade sejam executadas.
   border-top: 10px solid red;*/
+  margin: 0; /*é comum que especificar que a margin e padding são zeradas para que não haja conflito de propriedades quando formos estilizar nossas página*/
+  padding: 0;
 }
 /*Uma grande diferença entre*/
+
 body {
   /*esse é um seletor body, nem todas propriedades são herdadas. As que são são relativas a definição de texto.*/
   color: #444;
   font-family: sans-serif;
+  border-top: 10px;
+  margin: 0;
+}
+
+.main-header {
+  /*o main header não sera afetado pelo nosso seletor universal, pois a prioridade dele é maior*/
+  /*é um elemento com nivel de caixas grande, então colocamos aqui no topo pois antes estava especificado embaixo.  */
+  background-color: #f7f7f7;
+  /*padding: 20px;*/
+  /*padding-left: 40px;*/
+  /*padding-right: 40px;*/
+  padding: 20px 40px;
+  margin-bottom: 60px;
+  height: 80px;
+}
+
+post-header {
+  margin-bottom: 40px;
+}
+
+nav {
+  font-size: 18px;
+}
+
+article {
+  margin-bottom: 60px;
+}
+
+aside {
+  /*Aside será uma barra lateral, é um elemento de nivel de caixa grande e com varios elementos filho, é importante estar no topo do css*/
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+  border-left: 5px solid #1098ad;
+  border-right: 5px solid #1098ad;
+  padding: 50px 0;
+  width: 500px;
 }
 
 h1,
@@ -23,39 +63,52 @@ h1 {
 
 h2 {
   font-size: 40px; /*o h2 poderá ser maior que o h1, pois o h1 é mais pela semântica do que pela aparência*/
+  margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 h4 {
   font-size: 20px;
-
   text-transform: uppercase;
   text-align: center;
 }
 
 p {
-  font-size: 22px;
-
-  line-height: 1.5; /*altura da linha*/
-}
-
-/*
-li { não estilizamos a ul ou ol, e sim a "li"
   font-size: 20px;
+  line-height: 1.5; /*altura da linha*/
+  margin-bottom: 15px; /*ao especificar valores para o p meus bullets das listas somem, especificar margin para ol e ul*/
 }
 
- footer p { seletores descendentes
-font-size: 18px;
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 10px;
 }
 
-article header p {relação entre elemento pai e filho, sendo assim seletores descendentes aninhados que
-font-style: italic;
-
+li {
+  /*não estilizamos a ul ou ol, e sim a "li"*/
+  font-size: 20px;
+  margin-bottom: 10px;
 }
-*/
+
+li:last-child {
+  margin: 0; /*nao é precisamos especificar nenhum valor, apenas 0*/
+}
+
+footer p {
+  /*seletores descendentes*/
+  font-size: 18px;
+}
+
+article header p {
+  /*relação entre elemento pai e filho, sendo assim seletores descendentes aninhados que*/
+  font-style: italic;
+}
 
 #author-text {
   font-style: italic;
@@ -73,18 +126,6 @@ font-style: italic;
 
 .related {
   list-style: none;
-}
-
-.main-header {
-  background-color: #f7f7f7;
-}
-
-aside {
-  background-color: #f7f7f7;
-  border-top: 5px solid #1098ad;
-  border-bottom: 5px solid #1098ad;
-  border-left: 5px solid #1098ad;
-  border-right: 5px solid #1098ad;
 }
 
 body {
@@ -156,6 +197,12 @@ a:active {
   font-style: italic;
 }
 
+/*LVHA*/
+.post-img {
+  width: 100%; /*o tamanho da imagem herdará o tamanho do container pai, que no caso é o header que esta pegando todo o comprimento da pagina. alterando para 100% a imagem terá o mesmo comprimento da página */
+  height: auto;
+}
+
 /*Conflito de seletores - resolução. Especifidade de seletores*/
 #copyright {
   /*o seletor "id" tem mais poder/prioridade, então ele é o elemento quie irá valer*/
@@ -181,7 +228,3 @@ nav p {
   font-size: 18px;
 }
 */
-
-nav {
-  font-size: 18px;
-}
