--- a/03cssFundamentals/ChallengeSection03/style.css
+++ b/03cssFundamentals/ChallengeSection03/style.css
@@ -60,6 +60,8 @@ body {
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
+  margin-bottom: 15px;
+  margin-top: 30px;
 }
 
 .details-list {
