--- a/03cssFundamentals/style.css
+++ b/03cssFundamentals/style.css
@@ -6,6 +6,7 @@
 }
 /*Uma grande diferença entre*/
 
+/*PAGE SECTIONS*/
 body {
   /*esse é um seletor body, nem todas propriedades são herdadas. As que são são relativas a definição de texto.*/
   color: #444;
@@ -30,7 +31,7 @@ body {
   /*padding-right: 40px;*/
   padding: 20px 40px;
   margin-bottom: 60px;
-  height: 80px;
+  /*height: 80px;*/
 }
 
 post-header {
@@ -55,7 +56,7 @@ aside {
   padding: 50px 0;
   width: 500px;
 }
-
+/*smaller elements*/
 h1,
 h2,
 h3 {
@@ -208,6 +209,18 @@ a:active {
 .post-img {
   width: 100%; /*o tamanho da imagem herdará o tamanho do container pai, que no caso é o header que esta pegando todo o comprimento da pagina. alterando para 100% a imagem terá o mesmo comprimento da página */
   height: auto;
+}
+
+nav a:link {
+  /*background-color: orangered;
+  margin: 20px;
+  padding: 20px;
+  display: block;
+  */
+  margin-right: 30px;
+  /*margin-top: 10px; não funcionará até utilizar o display*/
+  margin-top: 10px;
+  display: inline-block;
 }
 
 /*Conflito de seletores - resolução. Especifidade de seletores*/
